apps/02-monitoring/goldilocks/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-dashboard
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Goldilocks
    gethomepage.dev/icon: goldilocks.svg
    gethomepage.dev/description: Resource recommendations
spec:
  ingressClassName: traefik
  rules:
    - host: goldilocks.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - goldilocks.dev.truxonline.com
      secretName: goldilocks-dashboard-tls
